fixing design on mobile

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,7 +1,13 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
 .about{
-    padding: 7rem 5rem 6rem;
+    padding: 5rem 3.5rem 4.5rem 3rem; 
+    height: 30rem;
+    @include m.desktop {
+        height: 100%;
+        padding: 7rem 3.5rem 6rem;
+        
+    }
 }
 .about__heading{
     text-transform: uppercase;
@@ -9,7 +15,18 @@
     letter-spacing: .7rem;
     max-width: 29rem;
     font-size: 1.45rem;
+
 }
 .about__text{
     color: v.$dark-gray;
+    font-size: 1.3rem;
+    font-weight: 500;
+    line-height: 1.4;
+    font-size: 1.5rem;
+    min-height: 170px;
+    @include m.desktop {
+        font-size: 1.3rem;
+        min-height: auto;
+        
+    }
 }
