--- a/src/sass/components/_hero-left.scss
+++ b/src/sass/components/_hero-left.scss
@@ -1,6 +1,11 @@
+@use '../base/variables' as v;
+@use '../base/mixins' as m;
 .hero-left{
+    height: 23.8rem;
     background-image: url('../images/image-about-dark.jpg');
     background-size: cover;
-    height: 100%;
     background-repeat: no-repeat;
+    @include m.desktop {
+        height: 100%;
+    }
 }
