--- a/src/sass/components/_informative.scss
+++ b/src/sass/components/_informative.scss
@@ -16,12 +16,10 @@
     margin: 2rem 0;
     font-size: 4rem;
     width: 92%;
-
-
     }
 }
 .informative__text{
-    color: v.$very-dark-gray;
+    color: v.$dark-gray;
     font-size: 1.6rem;
     line-height: 1.3;
     @include m.desktop {
